--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,18 @@ services:
       - 'MONGO_INITDB_ROOT_PASSWORD=secret'
       - 'MONGO_INITDB_ROOT_USERNAME=root'
     ports:
-      - '27017'
+      - '27017:27017'
     volumes:
       - mongo-data:/data/db
+
+  geoserver:
+    image: docker.osgeo.org/geoserver:2.28.x
+    container_name: geoserver
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./data:/opt/geoserver/data_dir/data
+      - ./styles:/opt/geoserver/data_dir/styles
 
 volumes:
   mongo-data:
