--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,19 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@tailwindcss/cli": "^4.1.13",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.12.2",
+    "bootstrap": "^5.3.8",
     "leaflet": "^1.9.4",
     "react": "^19.0.0-rc.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.0.0-rc.1",
     "react-leaflet": "^5.0.0-rc.2",
     "react-router-dom": "^7.9.2",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^4.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
